# Strateg

./: CMakeLists.txt  README.md  main.cpp  main_test.cpp
src/: func.h  func_test.cpp  main.cpp
